--- a/lab3_Classification/Classification.ipynb
+++ b/lab3_Classification/Classification.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -52,30 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/metrics/__init__.py:43: LightningDeprecationWarning: `pytorch_lightning.metrics.*` module has been renamed to `torchmetrics.*` and split off to its own package (https://github.com/PyTorchLightning/metrics) since v1.3 and will be removed in v1.5\n",
-      "  rank_zero_deprecation(\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-4384dec81282>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mDL_labs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdataloader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mDL_labs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLabConfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOrderedDict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mDL_labs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/stud1/f/fremar16/DL_labs/lab3_Classification/config.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mDL_labs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglobals\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mobject\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mClasses\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mLabConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"Configuration for lab. Inherit variables from the Config class.\n",
-      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Torch packages\n",
     "import torch\n",
@@ -95,6 +74,9 @@
     "import pytorch_lightning as pl\n",
     "import torchvision\n",
     "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from DL_labs.utils.progressbar import LitProgressBar"
    ]
   },
@@ -102,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load config"
+    "# Load config"
    ]
   },
   {
@@ -128,7 +110,7 @@
    "metadata": {},
    "source": [
     "## Example data\n",
-    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at *https://pytorch.org/vision/stable/transforms.html*\n",
+    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at the [pytorch doc](https://pytorch.org/vision/stable/transforms.html)\n",
     "\n",
     "Note that ToTensor and Rezise are required to reshape and transform the images correct. We do not want to apply augmentation to the test_transform that are applied on the validation and test dataloader."
    ]
@@ -237,7 +219,7 @@
     "        super().__init__()\n",
     "        self.conv_layer1 = self._conv_layer_set(num_channels, 32)\n",
     "        self.conv_layer2 = self._conv_layer_set(32, 64)\n",
-    "        self.fc1 = nn.Linear(64*30*30, 64) # Calculated with the size\n",
+    "        self.fc1 = nn.Linear(64*input_shape[0]*input_shape[1], 64) # Calculated with the size\n",
     "        self.fc2 = nn.Linear(64, num_classes)\n",
     "        \n",
     "        self.drop = nn.Dropout(0.5)\n",
@@ -256,7 +238,6 @@
     "\n",
     "        out = self.conv_layer1(x)\n",
     "        out = self.conv_layer2(out)\n",
-    "        #out = self.batch(out)\n",
     " \n",
     "        out = out.view(out.size(0), -1) # Flatten (batchsize, image size)\n",
     "        out = self.fc1(out)\n",
@@ -291,11 +272,9 @@
     "    'max_epochs':5,\n",
     "    \"train_metrics\":torchmetrics.MetricCollection([\n",
     "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\n",
-    "        torchmetrics.IoU(num_classes=cfg.NUM_CLASSES, compute_on_step=False)\n",
     "    ],postfix=\"_Train\"),\n",
     "    \"validation_metrics\":torchmetrics.MetricCollection([\n",
     "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\n",
-    "        torchmetrics.IoU(num_classes=cfg.NUM_CLASSES, compute_on_step=False)\n",
     "    ],postfix=\"_Validation\")\n",
     "}"
    ]
@@ -338,7 +317,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test performance"
+    "## Test the network on the test dataset\n",
+    "To test the performance for a qualitative estimation we can plot the input, target and the models prediction. This is a good approach to see the performance and understand if the model is close to a correct decision. However, for big data, we probobly want to focus on a qualitative estimation. Therefore we can analyse **Tensorboard** logs to get a better understanding of the model."
    ]
   },
   {
@@ -368,9 +348,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torchvision\n",
     "n_test = 10\n",
     "df_result = pd.DataFrame({\n",
     "    'Ground Truth': Y[:n_test],\n",
@@ -391,8 +368,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
-    "This lab "
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics\n",
+    "**TODO:** Does a high accuracy impy a good model, motivate your answer.\n",
+    "\n",
+    "**TODO:** Find an alternative metric which can show similar or better precision than accuracy."
    ]
   },
   {
@@ -415,7 +401,7 @@
    "source": [
     "## Hyperparameter tuning\n",
     "### Task 1\n",
-    "From the example approach we can see that the network performed very poorly. For the network to be consider \"good\" the truth images should match the predicted images. If the architecture can learn but unstable (check loss/epoch in tensorboard), it is possible to tune the parameters of the network. This mostly involves changing the learning rate, optimizers, loss function etc. to better learn features. A network that have a to high learning rate create a increase in variance of the network weights which can make the network unstable.\n",
+    "From the example approach we can see that the network performed very poorly. For the network to be consider \"good\" the truth images should match the predicted images. If the architecture can learn but is unstable (check loss/epoch in tensorboard), it is possible to tune the parameters of the network. This mostly involves changing the learning rate, optimizers, loss function etc. to better learn features. A network that have a to high learning rate create a increase in variance of the network weights which can make the network unstable.\n",
     "\n",
     "\n",
     "**TODO:** Perform hyperparameter tuning. Explain in detail why the parameters was changed and why it is considered \"better\"."
@@ -434,8 +420,7 @@
    "metadata": {},
    "source": [
     "**Question:** Did data augmentation improve the model? \\\n",
-    "**Question:** What do you think have the greatest impact on the performance, why? \\\n",
-    "**Question:** Does a high accuracy (90%) impy a good model, motivate your answer."
+    "**Question:** What do you think have the greatest impact on the performance, why? \\"
    ]
   }
  ],
@@ -456,7 +441,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
