Fixed url reference

--- a/Projects/project2_GAN/Project - GAN.ipynb
+++ b/Projects/project2_GAN/Project - GAN.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "source": [
     "# Dataset\n",
-    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at *https://pytorch.org/vision/stable/transforms.html*\n",
+    "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at [pytorch docs](https://pytorch.org/vision/stable/transforms.html)\n",
     "\n",
     "The dataset consist of a series of images where the last image in the series are the target image. All other images use the target image for the prediction. \n",
     "\n",
