--- a/Projects/project3_Detection/Project - Detection.ipynb
+++ b/Projects/project3_Detection/Project - Detection.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project will develop an object detection system with **Single-shot multibox detectors (SSD)**. The task is to use the COCO dataset from *https://cocodataset.org* to predict bounding boxes.  \n",
+    "This project will develop an object detection system with **Single-shot multibox detectors (SSD)**. The task is to use the [COCO](https://cocodataset.org) dataset to predict bounding boxes.  \n",
     "\n",
     "All **tasks** include **TODO's** thare are expected to be done before the deadline. The highlighted **Question's** should be answered in the report. Keep the answers separated so it is easy to read for the grading. Some sections include asserts or an expected result to give a and expected results are given. Some sections does not contain any **TODO's** but is good to understand them. \n",
     "\n",
