Changes path for root, changed task for GAN

--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise II: Regression</h1></center>\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now we are going to look at a regression problem. The data as described above (regr1) consists of 6 inputs (features) and one output (target) value. As for previous examples a new data set is generated each time you call the *regr1* function. To get exactly the same data set between different calls, use a fixed seed. New for this problem is that one can also control the amount of noise added to the target value. We are going to use a relatively small training dataset (\\~250) and a larger validation dataset (\\~1000) to get a more robust estimation of the generalization performance. For regression problems we also need new performance measures. The *stats_reg* function will give you two such measures:\n",
     "* MSE = mean squared error (low error mean good performance)\n",
@@ -47,84 +46,83 @@
     "\n",
     "## Task 4\n",
     "**TODO:** Summarize your findings in a few sentences.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Code"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The following code allows us to edit imported files without restarting the kernel for the notebook"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "# Hacky solution to access the global utils package\n",
-    "import sys,os\n",
+    "%load_ext autoreload\r\n",
+    "%autoreload 2\r\n",
+    "\r\n",
+    "# Hacky solution to access the global utils package\r\n",
+    "import sys,os\r\n",
     "sys.path.append(os.path.dirname(os.path.realpath('..')))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import pytorch_lightning as pl\n",
-    "\n",
-    "from config import LabConfig\n",
-    "from dataset import MLPData\n",
-    "from DL_labs.utils.model import Model\n",
-    "from DL_labs.utils.progressbar import LitProgressBar\n",
-    "from DL_labs.utils.model import Model\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
-    "from DL_labs.utils import (\n",
-    "    plot,\n",
-    "    progressbar\n",
+    "import numpy as np\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import torch\r\n",
+    "import pytorch_lightning as pl\r\n",
+    "\r\n",
+    "from config import LabConfig\r\n",
+    "from dataset import MLPData\r\n",
+    "from utils.model import Model\r\n",
+    "from utils.progressbar import LitProgressBar\r\n",
+    "from utils.model import Model\r\n",
+    "from torch.utils.data import TensorDataset, DataLoader\r\n",
+    "from utils import (\r\n",
+    "    plot,\r\n",
+    "    progressbar\r\n",
     ") "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "cfg = LabConfig()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Defining the MLP model\n",
     "\n",
     "This cell defines the MLP model. There are a number of parameters that is needed to \n",
     "define a model. Here is a list of them: **Note:** They can all be specified when you call\n",
     "this function in later cells. The ones specified in this cell are the default values.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class MLP(torch.nn.Module):\n",
     "    def __init__(self, \n",
@@ -144,20 +142,20 @@
     "        relu = self.relu(hidden)\n",
     "        output = self.fc2(relu)\n",
     "        return torch.sigmoid(output)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Define a function that allow us to convert numpy to pytorch DataLoader"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
     "    return DataLoader(\n",
@@ -169,13 +167,13 @@
     "        num_workers=num_workers,\n",
     "        **kwargs\n",
     "    )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Generate training and validation data\n",
     "x_train, d_train = MLPData.regr1(250, 0.0) # 250 data points with no noise\n",
@@ -191,21 +189,21 @@
     "\n",
     "train_loader = numpy2Dataloader(x_train,d_train)\n",
     "val_loader =  numpy2Dataloader(x_val,d_val)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Configuration\n",
     "Setup our local config that should be used for the trainer."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "config = {\n",
     "    'max_epochs':20,\n",
@@ -222,27 +220,27 @@
     "        }\n",
     "    }\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Training"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Lastly, put everything together and call on the trainers fit method. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -260,33 +258,35 @@
     "    train_dataloader=train_loader,\n",
     "    val_dataloaders=val_loader\n",
     ");"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Evaluation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plot.stats_class(x_train, d_train, 'Training', model)\n",
     "plot.stats_class(x_val, d_val, 'Validation', model)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "d_train"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
