--- a/lab3_Classification/Classification.ipynb
+++ b/lab3_Classification/Classification.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise III:<br> Image Classification using CNNs</h1></center>\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Welcome to the *fourth* lab for Deep Learning!\n",
     "\n",
@@ -26,130 +25,129 @@
     "Good luck!\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Import packages"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "%load_ext autoreload\r\n",
+    "%autoreload 2\r\n",
+    "# Hacky solution to acces the global utils package\r\n",
+    "import sys,os\r\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
+   ],
+   "outputs": [],
    "metadata": {
     "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "# Hacky solution to acces the global utils package\n",
-    "import sys,os\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Torch packages\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "# local modules\n",
-    "from torch.utils.data import DataLoader\n",
-    "from DL_labs.utils.dataset import ClassificationDataset\n",
-    "from DL_labs.utils import dataloader\n",
-    "from DL_labs.utils.model import Model\n",
-    "from config import LabConfig\n",
-    "from collections import OrderedDict\n",
-    "from DL_labs.utils import plot\n",
-    "import pprint\n",
-    "import torchmetrics\n",
-    "import pytorch_lightning as pl\n",
-    "import torchvision\n",
-    "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from DL_labs.utils.progressbar import LitProgressBar"
-   ]
+    "# Torch packages\r\n",
+    "import torch\r\n",
+    "import torch.nn as nn\r\n",
+    "import torch.nn.functional as F\r\n",
+    "\r\n",
+    "# local modules\r\n",
+    "from torch.utils.data import DataLoader\r\n",
+    "from utils.progressbar import LitProgressBar\r\n",
+    "from utils.dataset import ClassificationDataset\r\n",
+    "from utils import dataloader\r\n",
+    "from utils.model import Model\r\n",
+    "from config import LabConfig\r\n",
+    "from collections import OrderedDict\r\n",
+    "from utils import plot\r\n",
+    "import pprint\r\n",
+    "import torchmetrics\r\n",
+    "import pytorch_lightning as pl\r\n",
+    "import torchvision\r\n",
+    "\r\n",
+    "import pandas as pd\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Load config"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "cfg = LabConfig()\n",
+    "cfg = LabConfig()\r\n",
     "cfg.todict()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Example Task\n",
     "First we present an example task to get an idea of the implementation and how to structure the code."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Example data\n",
     "First load the dataloaders for three datasets; train, validation and test. Feel free to test different augmentations, more can be found at the [pytorch doc](https://pytorch.org/vision/stable/transforms.html)\n",
     "\n",
     "Note that ToTensor and Rezise are required to reshape and transform the images correct. We do not want to apply augmentation to the test_transform that are applied on the validation and test dataloader."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Augmentation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "train_transform = torchvision.transforms.Compose([\n",
-    "    torchvision.transforms.ToTensor(),\n",
-    "    torchvision.transforms.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), \n",
-    "])\n",
-    "test_transform = torchvision.transforms.Compose([\n",
-    "    torchvision.transforms.ToTensor(),\n",
-    "    torchvision.transforms.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), #, \n",
+    "train_transform = torchvision.transforms.Compose([\r\n",
+    "    torchvision.transforms.ToTensor(),\r\n",
+    "    torchvision.transforms.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), \r\n",
+    "])\r\n",
+    "test_transform = torchvision.transforms.Compose([\r\n",
+    "    torchvision.transforms.ToTensor(),\r\n",
+    "    torchvision.transforms.Resize((cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),interpolation=torchvision.transforms.InterpolationMode.NEAREST), #, \r\n",
     "])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Create dataloaders"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "train_dataloader = DataLoader(ClassificationDataset(cfg.training_img_dir, cfg.CLASSES, img_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH),transform=train_transform),\n",
     "                        batch_size=cfg.BATCH_SIZE,\n",
@@ -166,224 +164,225 @@
     "                        num_workers=cfg.NUM_WORKERS)\n",
     "\n",
     "print(\"Data batch generators are created!\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Visualise data\n",
     "To get an idea of the dataset we visualise the data. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "t_x, t_y = next(iter(train_dataloader))\n",
     "print(f\"x {tuple(t_x.shape)} {t_x.dtype} {t_x.min()} {t_x.max()}\")\n",
     "print(f\"y {tuple(t_y.shape)} {t_y.dtype} {t_y.min()} {t_y.max()}\")\n",
     "plot.Classification.data(t_x, t_y, nimages=10,nrows=2)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "if False: # Set to true to visualise statistics of the data\n",
-    "    plot.show_statistics(cfg.training_img_dir, fineGrained=cfg.fineGrained, title=\" Training Data Statistics \")\n",
-    "    plot.show_statistics(cfg.validation_img_dir, fineGrained=cfg.fineGrained, title=\" Validation Data Statistics \")\n",
+    "if False: # Set to true to visualise statistics of the data\r\n",
+    "    plot.show_statistics(cfg.training_img_dir, fineGrained=cfg.fineGrained, title=\" Training Data Statistics \")\r\n",
+    "    plot.show_statistics(cfg.validation_img_dir, fineGrained=cfg.fineGrained, title=\" Validation Data Statistics \")\r\n",
     "    plot.show_statistics(cfg.testing_img_dir, fineGrained=cfg.fineGrained, title=\" Testing Data Statistics \")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Create model\n",
     "Here is an simple architecture to train our network."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "class SimpleModel(nn.Module):\n",
-    "    def __init__(self,num_channels:int=4, num_classes:int=3, input_shape=(10,10),**kwargs):\n",
-    "        super().__init__()\n",
-    "        self.conv_layer1 = self._conv_layer_set(num_channels, 32)\n",
-    "        self.conv_layer2 = self._conv_layer_set(32, 64)\n",
-    "        self.fc1 = nn.Linear(64*input_shape[0]*input_shape[1], 64) # Calculated with the size\n",
-    "        self.fc2 = nn.Linear(64, num_classes)\n",
-    "        \n",
-    "        self.drop = nn.Dropout(0.5)\n",
-    "        \n",
-    "    def _conv_layer_set(self, in_c, out_c):\n",
-    "        conv_layer = nn.Sequential(OrderedDict([\n",
-    "            ('conv',nn.Conv2d(in_c, out_c, kernel_size=3, padding=0)),\n",
-    "            ('leakyrelu',nn.LeakyReLU()),\n",
-    "            ('maxpool',nn.MaxPool2d(2)),\n",
-    "        ]))\n",
-    "        return conv_layer\n",
-    "    \n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # Set 1\n",
-    "\n",
-    "        out = self.conv_layer1(x)\n",
-    "        out = self.conv_layer2(out)\n",
-    " \n",
-    "        out = out.view(out.size(0), -1) # Flatten (batchsize, image size)\n",
-    "        out = self.fc1(out)\n",
-    "        out = self.drop(out)\n",
-    "        out = self.fc2(out)\n",
-    "        \n",
+    "class SimpleModel(nn.Module):\r\n",
+    "    def __init__(self,num_channels:int=4, num_classes:int=3, input_shape=(10,10),**kwargs):\r\n",
+    "        super().__init__()\r\n",
+    "        self.conv_layer1 = self._conv_layer_set(num_channels, 32)\r\n",
+    "        self.conv_layer2 = self._conv_layer_set(32, 64)\r\n",
+    "        self.fc1 = nn.Linear(64*input_shape[0]*input_shape[1], 64) # Calculated with the size\r\n",
+    "        self.fc2 = nn.Linear(64, num_classes)\r\n",
+    "        \r\n",
+    "        self.drop = nn.Dropout(0.5)\r\n",
+    "        \r\n",
+    "    def _conv_layer_set(self, in_c, out_c):\r\n",
+    "        conv_layer = nn.Sequential(OrderedDict([\r\n",
+    "            ('conv',nn.Conv2d(in_c, out_c, kernel_size=3, padding=0)),\r\n",
+    "            ('leakyrelu',nn.LeakyReLU()),\r\n",
+    "            ('maxpool',nn.MaxPool2d(2)),\r\n",
+    "        ]))\r\n",
+    "        return conv_layer\r\n",
+    "    \r\n",
+    "\r\n",
+    "    def forward(self, x):\r\n",
+    "        # Set 1\r\n",
+    "\r\n",
+    "        out = self.conv_layer1(x)\r\n",
+    "        out = self.conv_layer2(out)\r\n",
+    " \r\n",
+    "        out = out.view(out.size(0), -1) # Flatten (batchsize, image size)\r\n",
+    "        out = self.fc1(out)\r\n",
+    "        out = self.drop(out)\r\n",
+    "        out = self.fc2(out)\r\n",
+    "        \r\n",
     "        return out"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Config"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Train model\n",
-    "config = {\n",
-    "    'optimizer':{\n",
-    "        \"type\":torch.optim.Adam,\n",
-    "        \"args\":{\n",
-    "            \"lr\":0.005,\n",
-    "        }\n",
-    "    },\n",
-    "    'criterion':torch.nn.CrossEntropyLoss(), # error function\n",
-    "    'max_epochs':5,\n",
-    "    \"train_metrics\":torchmetrics.MetricCollection([\n",
-    "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\n",
-    "    ],postfix=\"_Train\"),\n",
-    "    \"validation_metrics\":torchmetrics.MetricCollection([\n",
-    "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\n",
-    "    ],postfix=\"_Validation\")\n",
+    "# Train model\r\n",
+    "config = {\r\n",
+    "    'optimizer':{\r\n",
+    "        \"type\":torch.optim.Adam,\r\n",
+    "        \"args\":{\r\n",
+    "            \"lr\":0.005,\r\n",
+    "        }\r\n",
+    "    },\r\n",
+    "    'criterion':torch.nn.CrossEntropyLoss(), # error function\r\n",
+    "    'max_epochs':5,\r\n",
+    "    \"train_metrics\":torchmetrics.MetricCollection([\r\n",
+    "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\r\n",
+    "    ],postfix=\"_Train\"),\r\n",
+    "    \"validation_metrics\":torchmetrics.MetricCollection([\r\n",
+    "        torchmetrics.Accuracy(num_classes=cfg.NUM_CLASSES,compute_on_step=False),\r\n",
+    "    ],postfix=\"_Validation\")\r\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Train"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load model\n",
-    "modelObj = Model(SimpleModel(num_classes=cfg.NUM_CLASSES, num_channels=cfg.IMAGE_CHANNEL, input_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH)),**config)\n",
-    "\n",
-    "# Setup trainer\n",
-    "trainer = pl.Trainer(\n",
-    "            max_epochs=config['max_epochs'], \n",
-    "            gpus=cfg.GPU,\n",
-    "            logger=pl.loggers.TensorBoardLogger(save_dir=cfg.TENSORBORD_DIR),\n",
-    "            callbacks=[LitProgressBar()],\n",
-    "            progress_bar_refresh_rate=1,\n",
-    "            weights_summary=None, # Can be None, top or full\n",
-    "            num_sanity_val_steps=10,   \n",
-    "        )\n",
-    "# Train with the training and validation data- \n",
-    "trainer.fit(\n",
-    "    modelObj, \n",
-    "    train_dataloader=train_dataloader,\n",
-    "    val_dataloaders=valid_dataloader\n",
+    "# Load model\r\n",
+    "modelObj = Model(SimpleModel(num_classes=cfg.NUM_CLASSES, num_channels=cfg.IMAGE_CHANNEL, input_shape=(cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH)),**config)\r\n",
+    "\r\n",
+    "# Setup trainer\r\n",
+    "trainer = pl.Trainer(\r\n",
+    "            max_epochs=config['max_epochs'], \r\n",
+    "            gpus=cfg.GPU,\r\n",
+    "            logger=pl.loggers.TensorBoardLogger(save_dir=cfg.TENSORBORD_DIR),\r\n",
+    "            callbacks=[LitProgressBar()],\r\n",
+    "            progress_bar_refresh_rate=1,\r\n",
+    "            weights_summary=None, # Can be None, top or full\r\n",
+    "            num_sanity_val_steps=10,   \r\n",
+    "        )\r\n",
+    "# Train with the training and validation data- \r\n",
+    "trainer.fit(\r\n",
+    "    modelObj, \r\n",
+    "    train_dataloader=train_dataloader,\r\n",
+    "    val_dataloaders=valid_dataloader\r\n",
     ");"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Test the network on the test dataset\n",
     "To test the performance for a qualitative estimation we can plot the input, target and the models prediction. This is a good approach to see the performance and understand if the model is close to a correct decision. However, for big data, we probobly want to focus on a qualitative estimation. Therefore we can analyse **Tensorboard** logs to get a better understanding of the model."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create iterable from the test dataset\n",
+    "# Create iterable from the test dataset\r\n",
     "iter_dataloader = iter(test_dataloader)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Take one batch from the test dataset and predict!\n",
-    "X, Y = next(iter_dataloader)\n",
+    "# Take one batch from the test dataset and predict!\r\n",
+    "X, Y = next(iter_dataloader)\r\n",
     "preds = torch.argmax(modelObj.predict_step(X,0,0),dim=1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "n_test = 10\n",
-    "df_result = pd.DataFrame({\n",
-    "    'Ground Truth': Y[:n_test],\n",
-    "    'Predicted label': preds[:n_test]})\n",
+    "n_test = 10\r\n",
+    "df_result = pd.DataFrame({\r\n",
+    "    'Ground Truth': Y[:n_test],\r\n",
+    "    'Predicted label': preds[:n_test]})\r\n",
     "display(df_result.T)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plot.Classification.results(X, preds)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Exercises"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Metrics\n",
     "**TODO:** Does a high accuracy impy a good model, motivate your answer.\n",
     "\n",
     "**TODO:** Find an alternative metric which can show similar or better precision than accuracy."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Architecture\n",
     "Modify the architecture of the SimpleModel to further increase the performance. Remember that very deep network allow the network to learn many features but if the dataset is to small the model will underfit. A simple dataset should not require a very deep network to learn good features.\n",
@@ -393,11 +392,11 @@
     "**TODO:** Modify the SimpleModel and increase the complexity a little. Does the performance improve? If not, did you modify it to much or to little?\n",
     "\n",
     "**TODO:** Modify the SimpleModel architecture. Now combine the hyperparameter tuning and modification of the architecture to reach a performance that is close to the truth images. Explain in detail why the change was applied and if it improved the model a lot."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Hyperparameter tuning\n",
     "### Task 1\n",
@@ -405,23 +404,24 @@
     "\n",
     "\n",
     "**TODO:** Perform hyperparameter tuning. Explain in detail why the parameters was changed and why it is considered \"better\"."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Augmentation\n",
     "**TODO:** Test if data augmentation help. Note that if we want to apply augmentation we need to make sure that the input and target perform the same augmentation. Otherwise, the data will not be correct!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Question:** Did data augmentation improve the model? \\\n",
     "**Question:** What do you think have the greatest impact on the performance, why? \\"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
