--- a/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
+++ b/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise II: Performance</h1></center>\n",
     "\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Excercise 2 - Performance\n",
     "\n",
@@ -24,125 +23,133 @@
     "A suggestion for you is to either use accuracy or loss as your performance measure.\n",
     "\n",
     "**Note:** Use a fixed random seed for this exercise since you will compare between runs. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Data: syn1 - syn3\n",
     "Three different synthetic classification problems will be used. They are all 2D binary classification problems which allows for an easy visual inspection of the different classes and the decision boundary implemented by the network. They are called *syn1, syn2* and *syn3*. Each of these datasets are generated \"on the fly\" each time. They come from various normal distributions. Since they are generated using random numbers it means that each time you generate the data it will be slightly different from next time. You can control this by having a fixed *seed* to the random number generator. The cell \"PlotData\" will plot these datasets."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Code"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The following code allows us to edit imported files without restarting the kernel for the notebook"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "# Hacky solution to access the global utils package\n",
-    "import sys,os\n",
-    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
-   ]
+    "%load_ext autoreload\r\n",
+    "%autoreload 2\r\n",
+    "\r\n",
+    "# Hacky solution to access the global utils package\r\n",
+    "import sys,os\r\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('')))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import pytorch_lightning as pl\n",
-    "\n",
-    "from config import LabConfig\n",
-    "from dataset import MLPData\n",
-    "from DL_labs.utils.model import Model\n",
-    "from DL_labs.utils.progressbar import LitProgressBar\n",
-    "from DL_labs.utils.model import Model\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
-    "from DL_labs.utils import (\n",
-    "    plot,\n",
-    "    progressbar\n",
+    "import numpy as np\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import torch\r\n",
+    "import pytorch_lightning as pl\r\n",
+    "\r\n",
+    "from config import LabConfig\r\n",
+    "from dataset import MLPData\r\n",
+    "from utils.model import Model\r\n",
+    "from utils.progressbar import LitProgressBar\r\n",
+    "from utils.model import Model\r\n",
+    "from torch.utils.data import TensorDataset, DataLoader\r\n",
+    "from utils import (\r\n",
+    "    plot,\r\n",
+    "    progressbar\r\n",
     ") "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
    "source": [
     "cfg = LabConfig()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Defining the MLP model\n",
     "\n",
     "This cell defines the MLP model. There are a number of parameters that is needed to \n",
     "define a model. Here is a list of them: **Note:** They can all be specified when you call\n",
     "this function in later cells. The ones specified in this cell are the default values.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "class MLP(torch.nn.Module):\n",
-    "    def __init__(self, \n",
-    "                inp_dim=None,         \n",
-    "                hidden_nodes=1,                      # number of nodes in hidden layer\n",
-    "                num_out=None,\n",
-    "                **kwargs\n",
-    "            ):\n",
-    "        super(MLP, self).__init__()\n",
-    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\n",
-    "        self.relu = torch.nn.ReLU()\n",
-    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\n",
-    "\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        hidden = self.fc1(x)\n",
-    "        relu = self.relu(hidden)\n",
-    "        output = self.fc2(relu)\n",
+    "class MLP(torch.nn.Module):\r\n",
+    "    def __init__(self, \r\n",
+    "                inp_dim=None,         \r\n",
+    "                hidden_nodes=1,                      # number of nodes in hidden layer\r\n",
+    "                num_out=None,\r\n",
+    "                **kwargs\r\n",
+    "            ):\r\n",
+    "        super(MLP, self).__init__()\r\n",
+    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\r\n",
+    "        self.relu = torch.nn.ReLU()\r\n",
+    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\r\n",
+    "\r\n",
+    "\r\n",
+    "    def forward(self, x):\r\n",
+    "        hidden = self.fc1(x)\r\n",
+    "        relu = self.relu(hidden)\r\n",
+    "        output = self.fc2(relu)\r\n",
     "        return torch.sigmoid(output)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Define a function that allow us to convert numpy to pytorch DataLoader"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
     "    return DataLoader(\n",
@@ -154,27 +161,27 @@
     "        num_workers=num_workers,\n",
     "        **kwargs\n",
     "    )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Dataset"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "First we convert our dataset into a pytorch Dataset. Thereafter we load it into our DataLoader. Note that we here define the batch_size and the number of workers that should be used. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Generate training data\n",
     "x_train, d_train = MLPData.syn2(100)\n",
@@ -182,21 +189,21 @@
     "\n",
     "train_loader = numpy2Dataloader(x_train,d_train)\n",
     "val_loader =  numpy2Dataloader(x_val,d_val)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Configuration\n",
     "Setup our local config that should be used for the trainer."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "config = {\n",
     "    'max_epochs':10,\n",
@@ -213,27 +220,27 @@
     "        }\n",
     "    }\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Training"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Lastly, put everything together and call on the trainers fit method. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -251,20 +258,20 @@
     "    train_dataloader=train_loader,\n",
     "    val_dataloaders=val_loader\n",
     ");"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Evaluation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Call the stats function to print out statistics for classification problems\n",
     "plot.stats_class(x_train, d_train, 'Training', model)\n",
@@ -275,11 +282,12 @@
     "\n",
     "# If you uncomment this one you will see how the decsion boundary is with respect to the validation data\n",
     "plot.decision_bondary(trainer.lightning_module,x_val, d_val)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Task 1\n",
     "Train a classifier for the *syn2* dataset. Use the a validation dataset (val_loader) as an estimate of the *true* performance. Since we generate these datasets we can allow for a relatively large validation dataset in order to get a more accurate estimation of *true* performance. The default value in the cell is to generate 1000 validation datapoints. \n",
@@ -303,14 +311,14 @@
     "**TODO:** What is the optimal number of hidden nodes for the syn2 dataset in order to maximize your validation performance?\n",
     "\n",
     "**TODO:** How many hidden nodes do you need to find a reasonable solution to the problem?  Extra: Can you figure out why this many?"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL-Labs",
-   "language": "python",
-   "name": "dl-labs"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('DL_labs': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -323,6 +331,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "4ccf88e37874d44b4dfe33c31e1bb4a10ca4e414e0a68744582aebd290f71bcd"
   }
  },
  "nbformat": 4,
